project/stage/parse_tests/tests/reject/bad_statements/bad_return_statements/before_var_decl.ul
void main () {
    return ;
    boolean wOOP_1123;
}
